# TuneCraft-Music-Plyer

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  config.toml.sample  deny.toml  list_audio_devices.rs  meson.build  rustfmt.toml  scratch_cpal.rs  strip_comments.py  tunecraft.appdata.xml  tunecraft.desktop.in
.github/workflows/: ci.yml  release.yml
build-aux/: Tunecraft.wxs  bundle-gstreamer-macos.sh  bundle-gstreamer-windows.bat  valgrind.supp  verify-gstreamer-linux.sh
build-aux/appimage/: AppRun
build-aux/flatpak/: org.tunecraft.Tunecraft.json
build-aux/macos/: Info.plist  entitlements.plist
crates/tc-analysis/: Cargo.toml
crates/tc-analysis/src/: bpm.rs  chroma.rs  lib.rs  loudness.rs  lyrics_sentiment.rs  mood.rs  waveform.rs
crates/tc-config/: Cargo.toml
crates/tc-config/src/: lib.rs  persistence.rs
crates/tc-config/src/types/: app.rs  engine.rs  enums.rs  library.rs  lyrics.rs  mod.rs  playback.rs  scrobble.rs  ui.rs
crates/tc-db/: Cargo.toml
crates/tc-db/migrations/: V001__initial.sql  V002__favorites_and_fixes.sql  V003__album_unique_constraint.sql  V004__cleanup_and_metadata.sql  V005__cover_art_data.sql  V006__local_scrobbles.sql  V007__fix_version_metadata.sql  V008__update_version_1_0_1.sql  V009__update_version_1_0_2.sql  V010__update_version_3_1_0.sql  V011__update_version_3_1_3.sql
crates/tc-db/src/: lib.rs  migrations.rs  models.rs
crates/tc-db/src/repository/: aggregates.rs  covers.rs  eq_presets.rs  favorites.rs  mod.rs  playlists.rs  tracks.rs  waveforms.rs
crates/tc-engine/: Cargo.toml  scratch.rs
crates/tc-engine/benches/: dsp_bench.rs  pipeline_bench.rs
crates/tc-engine/src/: buffer.rs  lib.rs
crates/tc-engine/src/analysis/: mod.rs  spectrum.rs  waveform.rs
crates/tc-engine/src/decode/: mod.rs  symphonia_decoder.rs
crates/tc-engine/src/dsp/: biquad.rs  convolution.rs  crossfade.rs  crossfeed.rs  dither.rs  equalizer.rs  gain.rs  limiter.rs  loudness.rs  mod.rs  multiband_compressor.rs  pipeline.rs  resampler.rs  spectrum.rs  stereo.rs  time_stretch.rs
crates/tc-engine/src/engine/: commands.rs  crossfade.rs  decode_loop.rs  helpers.rs  mod.rs  recovery.rs  stream.rs  tests.rs
crates/tc-engine/src/output/: cpal_output.rs  mod.rs
crates/tc-library/: Cargo.toml
crates/tc-library/src/: cover_art.rs  lib.rs  metadata.rs
crates/tc-lyrics/: Cargo.toml
crates/tc-lyrics/src/: lib.rs
crates/tc-platform/: Cargo.toml
crates/tc-platform/src/: lib.rs  media_control.rs  media_keys.rs  notifications.rs  shortcuts.rs  types.rs
crates/tc-platform/src/mpris/: dbus.rs  mod.rs  signals.rs
crates/tc-ui/: Cargo.toml  build.rs
crates/tc-ui/src/: converters.rs  eq_panel.rs  folders_view.rs  lib.rs  player_bar.rs  settings_view.rs  sidebar.rs  theme.rs  track_list.rs
crates/tc-ui/src/app/: context.rs  library_actions.rs  lyrics_actions.rs  mod.rs  playback_actions.rs  scrobble_actions.rs  sync.rs  toasts.rs
crates/tc-ui/src/services/: config.rs  eq.rs  library.rs  lyrics.rs  mod.rs  platform.rs  playback.rs  scrobble.rs
crates/tc-ui/ui/: app.slint  types.slint
crates/tc-ui/ui/components/: dialogs.slint  eq_panel.slint  folders_view.slint  lyrics_panel.slint  player_bar.slint  settings_view.slint  sidebar.slint  toasts.slint  track_list.slint
crates/tc-ui/ui/theme/: colors.slint  widgets.slint
crates/tunecraft/: Cargo.toml
crates/tunecraft-core/: Cargo.toml
crates/tunecraft-core/src/: error.rs  lib.rs
crates/tunecraft-core/src/audio/: convolution.rs  crossfade.rs  dsp_thread.rs  equalizer.rs  exclusive.rs  gapless.rs  genre_preset.rs  loudness.rs  mod.rs  output.rs  pcm_cache.rs  pipeline.rs  replaygain.rs  resampler.rs
crates/tunecraft-core/src/audio/dsp/: biquad.rs  dynamics.rs  gapless_smoother.rs  mod.rs  ms_eq.rs  seek_fade.rs
crates/tunecraft-core/src/audio/engine/: convolution.rs  crossfade.rs  eq_control.rs  gapless.rs  loader.rs  loudness.rs  mod.rs  presets.rs  replaygain.rs  seek.rs  transport.rs  volume.rs
crates/tunecraft-core/src/config/: mod.rs
crates/tunecraft-core/src/database/: album_repo.rs  connection.rs  cover_art_repo.rs  migrations.rs  mod.rs  models.rs  mood_repo.rs  playlist_repo.rs  pref_repo.rs  scrobble_repo.rs  track_repo.rs
crates/tunecraft-core/src/mood/: mod.rs
crates/tunecraft-core/src/scrobbler/: lastfm.rs  mod.rs
crates/tunecraft-core/src/util/: crypto.rs  hash.rs  i18n.rs  mod.rs  validation.rs
crates/tunecraft-core/tests/: integration.rs
crates/tunecraft-ui/: Cargo.toml
crates/tunecraft-ui/src/: app.rs  app_state.rs  i18n.rs  main.rs  media_keys.rs  styles.rs
crates/tunecraft-ui/src/components/: context_menu.rs  eq_panel.rs  filter_panel.rs  mod.rs  notifications_panel.rs  playback_bar.rs  queue_panel.rs  sidebar.rs  topbar.rs  track_list.rs
crates/tunecraft/src/: main.rs
crates/tunecraft/tests/: smoke_tests.rs
docs/: migration.md
po/: hi.po  tunecraft.pot
tests/: smoke_tests.rs
