[package]
name = "tc-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
