[package]
name = "tc-db"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
# v3.0.0: Switched from std::sync::Mutex to parking_lot::Mutex for ~30%
# faster lock acquisition and no poisoning. The rest of the workspace
# already uses parking_lot, so this also removes an inconsistency.
parking_lot = { workspace = true }
