[package]
name = "tunecraft-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
gstreamer.workspace = true
gstreamer-app.workspace = true
cpal.workspace = true
ringbuf.workspace = true
lofty.workspace = true
rustfft.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
symphonia.workspace = true  # kept for mood analysis / future shared PCM cache
tokio.workspace = true
futures.workspace = true
notify.workspace = true
walkdir.workspace = true
serde.workspace = true
toml.workspace = true
chrono.workspace = true
reqwest = { workspace = true, optional = true }
serde_json.workspace = true
sha2.workspace = true
md-5.workspace = true
memmap2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
glib.workspace = true
gio.workspace = true
urlencoding.workspace = true
lru.workspace = true
url.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
keyring = { workspace = true, optional = true }
gettext-rs.workspace = true
# High-quality resampler (migrated from samplerate 0.2 → rubato 0.15)
rubato.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[features]
default = []
lastfm = ["dep:reqwest"]
lyrics = ["dep:reqwest"]
keyring = ["dep:keyring"]

[dev-dependencies]
tempfile.workspace = true
